--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: spa_9800cp_esp32
+  name: spa-9800cp-esp32
 
 esp32:
   board: esp32dev
@@ -7,20 +7,22 @@ esp32:
     type: arduino
 
 logger:
-  level: WARN
+  level: DEBUG
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
 api:
-ota:
 
+ota:
+  - platform: esphome
+    
 external_components:
   - source:
       type: git
       url: https://github.com/Saboral/balboa_spa_9800esphome
-      ref: main
+      ref: 0c5866d135a1843af72e94147b2ae3e8075c8912
     components: [ balboa_9800cp ]
 
 balboa_9800cp:
