--- a/config.yaml
+++ b/config.yaml
@@ -22,7 +22,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/Saboral/balboa_spa_9800esphome
-      ref: 0c5866d135a1843af72e94147b2ae3e8075c8912
+      ref: main
     components: [ balboa_9800cp ]
 
 balboa_9800cp:
